Some separation of exercises.

--- a/src/FSharp/FSharp.fsproj
+++ b/src/FSharp/FSharp.fsproj
@@ -62,9 +62,10 @@
     <None Include="Scripts\1. Hello World.fsx" />
     <None Include="Scripts\2. Captured code.fsx" />
     <None Include="Scripts\3. Chains.fsx" />
-    <None Include="Scripts\4. Parallel.fsx" />
-    <None Include="Scripts\5. CloudFiles.fsx" />
-    <None Include="Scripts\6. CloudFlow.fsx" />
+    <None Include="Scripts\4. Interop.fsx" />
+    <None Include="Scripts\5. Parallel.fsx" />
+    <None Include="Scripts\6. CloudFiles.fsx" />
+    <None Include="Scripts\7. CloudFlow.fsx" />
     <None Include="Scripts\SetupThespian.fsx" />
     <None Include="Scripts\load-references-debug.fsx" />
     <None Include="Scripts\load-project-debug.fsx" />
